# jsonxlsx

./: .gitignore  README.md  jsonxlsx.cabal  stack.yaml
src/: ByteStringToBase64.hs  Empty.hs  ExcelDates.hs  GetSheetnames.hs  ReadXLSX.hs  ReadXLSX2.hs  TestsXLSX.hs  WriteXLSX.hs
src-commandline/: MainGetSheetnames.hs  MainRead.hs  MainRead2.hs  MainReadCDF.hs  MainReadComments.hs  MainReadTypes.hs  MainWrite.hs
src-dlls/: MainRead.hs  read.def
src/ReadXLSX/: AllSheetsToJSON.hs  Internal.hs  ReadAndWrite.hs  ReadComments.hs  SheetToDataframe.hs  SheetToList.hs
src/WriteXLSX/: DataframeToSheet.hs  DrawingPicture.hs  Empty.hs  ExtractKeys.hs
test/: Main.hs
