name:                jsonxlsx
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/stla/jsonxlsx#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Spreadsheet
build-type:          Simple
cabal-version:       >=1.22
extra-source-files:  README.md, StartEnd.c

-- stack install --flag jsonxlsx:exe
flag exe
    description:
        Build the executables.
    default: False
    manual:  True
flag dll
    description:
        Build the dlls.
    default: False
    manual:  True

library
  hs-source-dirs:      src
  exposed-modules:     WriteXLSX
                     , WriteXLSX.DataframeToSheet
                     , Empty
                     , ReadXLSX
                     , ReadXLSX2
                     , ReadXLSX.Internal
                     , ReadXLSX.SheetToDataframe
                     , ReadXLSX.SheetToList
                     , ReadXLSX.AllSheetsToJSON
                     , ExcelDates
                     , ByteStringToBase64
                     , TestsXLSX
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xlsx
                     , aeson
                     , dates == 0.2.2.1
                     , regex-compat
                     , containers
                     , text
                     , lens
                     , bytestring
                     , unordered-containers == 0.2.7.2
                     , vector
                     , time
                     , insert-ordered-containers == 0.2.0.0
                     , scientific == 0.3.4.10
                     , extra
                     , text-show
                     , base64-bytestring
                     , mime-types
                     , Unique
                     , utf8-string

executable json2xlsx
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainWrite.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text
                     , utf8-string

executable xlsx2json2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainRead2.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text

executable xlsx2json
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainRead.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text

executable getXLSXcomments
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainReadComments.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text
executable getXLSXtypes
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainReadTypes.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text

executable getXLSXsheets
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainGetSheetnames.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text

executable xlsx2jsonR
  if flag(dll)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-dlls
  main-is:             MainRead.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , bytestring
                     , text
  if os(windows)
    ghc-options:       -shared -fPIC StartEnd.c
  else
    ghc-options:       -shared -fPIC -dynamic -lHSrts-ghc8.0.2 StartEnd.c


source-repository head
  type:     git
  location: https://github.com/stla/jsonxlsx
