name:                jsonxlsx
version:             0.2.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/stla/jsonxlsx#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Spreadsheet
build-type:          Simple
cabal-version:       >=1.22
extra-source-files:  README.md

-- stack install --flag jsonxlsx:exe
flag exe
    description:
        Build the executables.
    default: False
    manual:  True

library
  hs-source-dirs:      src
  exposed-modules:     WriteXLSX
                     , WriteXLSX.DataframeToSheet
                     , WriteXLSX.ExtractKeys
                     , Empty
                     , ReadXLSX
                     , ReadXLSX.Internal
                     , ReadXLSX.SheetToList
                     , GetSheetnames
                     , ExcelDates
                     , ByteStringToBase64
  default-language:    Haskell2010
  ghc-options:        -fwarn-unused-imports
  build-depends:       base >= 4.7 && < 5
                     , xlsx
                     , aeson
                     , dates == 0.2.2.1
                     , regex-compat
                     , containers
                     , text
                     , lens
                     , bytestring
                     , unordered-containers == 0.2.7.2
                     , vector
                     , time
                     , insert-ordered-containers == 0.2.0.0
                     , scientific == 0.3.4.10
                     , extra
                     , text-show
                     , base64-bytestring
                     , mime-types
                     , Unique
                     , utf8-string
                     , regex-applicative

executable json2xlsx
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainWrite.hs
  ghc-options:        -fwarn-unused-imports -optc-Os
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text
                     , utf8-string

executable xlsx2json
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainRead.hs
  ghc-options:        -fwarn-unused-imports -O3 -optc-Os
  other-extensions:    CPP
  CPP-Options:         -DPORTABLE
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text

executable getXLSXsheets
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-commandline
  main-is:             MainGetSheetnames.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , jsonxlsx
                     , optparse-applicative == 0.13.1.0
                     , bytestring
                     , text

test-suite data-test
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       test/
  other-modules:
  Build-Depends:        base
                      , bytestring
                      , directory
                      , tasty
                      , tasty-hunit
                      , tasty-smallcheck
                      , jsonxlsx
  Default-Language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/jsonxlsx
